--- a/backroom.html
+++ b/backroom.html
@@ -56,7 +56,7 @@
     pointer-events: none;
     background: repeating-linear-gradient(
       0deg,
-      rgba(0,255,153,0.05),
+      rgba(9, 74, 48, 0.819),
       rgba(0,255,153,0.05) 1px,
       transparent 2px,
       transparent 3px
@@ -67,7 +67,7 @@
 <body>
   <div class="tech-text">
     You have entered the Backroom.<br />
-    Ask VOID-11 HARPER about <span style="color:#ff0044;">"ai fact"</span>.<br />
+    Ask VOID-11 HARPER about <span style="color:#ff366b;">"ai fact"</span>.<br />
     The void is listening...
   </div>
 </body>
